Added js for the game

--- a/game.html
+++ b/game.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
     <link rel="stylesheet" href="game.css">
+    <script defer src="game.js"></script>
 </head>
 <body>
+    <h1>Play a Game!!</h1>
     <div class="game-container">
-        <div id="story-text">TEXT TEXT</div>
-        <div id="opt-buttons" class="button-grid">
+        <div id="story-text">Hello</div>
+        <div id= "opt-buttons" class="button-grid">
             <button class="btn">1</button>
             <button class="btn">2</button>
             <button class="btn">3</button>
